# Ransac-Planar-Segmentation-using-IMU

./: CMakeLists.txt  README.md
detection/: CMakeLists.txt
detection/include/: ransac.h  segmentation_worker.h
detection/src/: ransac.cpp  segmentation_worker.cpp
frames/include/: camera_frames.h  pre_processing_configs.h  segmentation_config.h
pre_processing/: CMakeLists.txt
pre_processing/include/: pre_processing.h  pre_processing_interface.h
pre_processing/src/: pre_processing.cpp
realsense/: CMakeLists.txt
realsense/include/: input_device_interface.h  realsense.h
realsense/src/: realsense.cpp
tests/: CMakeLists.txt
tests/src/: test_z_plane_seg.cpp
